syntax="proto3";
option java_multiple_files = true;
package currencyEx;

service currencyService{
    rpc addBank(Subscribe) returns (stream AckCur);
    rpc removeBank(Unsubscribe) returns (AckEmpt);
}

message AckEmpt{

}

message AckCur{
    Currency curs =1;
    double val = 2;
}

message Subscribe{
    int32 id =1;
    repeated Currency curs = 2;
}

message Unsubscribe{
    int32 id=1;
}

enum Currency{
    EUR=0;
    USD=1;
    CHF=2;
    GPB=3;
}